2003-02-24  Till Kamppeter <till.kamppeter@gmx.net>

	* lib/Foomatic/DB.pm, foomatic-perl-data.c: Added support for
	  "<ppdentry>" tags to add arbitrary extra lines to the PPDs,
	  added support for "<general>" and "<ieee1284>" tags in the
	  "<autodetect>" section of a printer entry, Added "*1284DeviceID"
	  keyword to generated PPDs, made disrinction between color and
	  bw printers in the generated PPD files, fixed "*ModelName"
	  to comply with PPD specs, added "FoomaticRIPDefault..." keywords
	  to numerical options (see
  http://www.linuxprinting.org/pipermail/foomatic-devel/2003q1/001250.html).
	  
2003-02-23  Till Kamppeter <till.kamppeter@gmx.net>

	* foomatic-filters-ppds-install, foomatic-filters-ppds-README,
	  README.build-foomatic-filters-ppds, Makefile.in: Added facility
	  to build package with all PPD files and the filters.

	* foomatic-compiledb.in: Added permissions to "mkdir" function call,
	  so that "foomatic-compiledb" also works with Perl 5.0.x.
	
2003-02-03  Till Kamppeter <till.kamppeter@gmx.net>

	* *: Tagged CVS for the release of foomatic-db-engine 3.0.0beta1. 
	  Tag name: "foomatic-db-engine-3_0_0beta1".

	* README, USAGE, Foomatic-Devel-Ideas.txt: Updated for version
	  3.0.0beta1.
	
2003-01-31  Till Kamppeter <till.kamppeter@gmx.net>

	* lib/Foomatic/DB.pm: Fixed bug in the checking for missing long
	  names/translations in PPD files.

2003-01-30  Till Kamppeter <till.kamppeter@gmx.net>

	* foomatic-configure.in: Fixed bug of "foomatic" flag in the Perl
	  data structure being set when the PPD is non-Foomatic.
	
2003-01-29  Till Kamppeter <till.kamppeter@gmx.net>

	* lib/Foomatic/DB.pm, foomatic-configure.in: Improved sorting of
	  options, make PPD parser sort the options when the PPD file is
	  non-Foomatic, Automatically fill in longnames/translations which
	  are missing in the PPD file, fixed stripping of "dossy" line
	  ends in PPD files, foomatic-configure can now also generate a